--- a/CTEx/Storyboards/Base.lproj/Main.storyboard
+++ b/CTEx/Storyboards/Base.lproj/Main.storyboard
@@ -181,6 +181,49 @@
                                             <segue destination="BUb-lL-8aB" kind="show" id="6wD-pc-IOY"/>
                                         </connections>
                                     </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="85" id="FGE-yq-rxj" userLabel="SearchMenu">
+                                        <rect key="frame" x="0.0" y="283" width="375" height="85"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="FGE-yq-rxj" id="vjS-UC-2sM">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="85"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="R4w-Lr-lHr" userLabel="Search">
+                                                    <rect key="frame" x="56" y="27.666666666666671" width="48" height="30"/>
+                                                    <state key="normal" title="Search">
+                                                        <color key="titleColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    </state>
+                                                </button>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="magnifyingglass" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="oyM-YT-xQk">
+                                                    <rect key="frame" x="16" y="31.666666666666664" width="24" height="21.666666666666664"/>
+                                                    <color key="tintColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="24" id="VID-mD-1hi"/>
+                                                        <constraint firstAttribute="width" constant="24" id="kEX-P1-hyh"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gik-28-YaE">
+                                                    <rect key="frame" x="16" y="63" width="339" height="2"/>
+                                                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="2" id="Seq-Fu-rbG"/>
+                                                    </constraints>
+                                                </view>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="oyM-YT-xQk" firstAttribute="centerY" secondItem="vjS-UC-2sM" secondAttribute="centerY" id="0Ht-ZF-YLR"/>
+                                                <constraint firstItem="R4w-Lr-lHr" firstAttribute="leading" secondItem="oyM-YT-xQk" secondAttribute="trailing" constant="16" id="8RI-Gt-cd6"/>
+                                                <constraint firstItem="R4w-Lr-lHr" firstAttribute="centerY" secondItem="oyM-YT-xQk" secondAttribute="centerY" id="DiV-AZ-qxb"/>
+                                                <constraint firstItem="gik-28-YaE" firstAttribute="leading" secondItem="vjS-UC-2sM" secondAttribute="leading" constant="16" id="Uao-Za-WKV"/>
+                                                <constraint firstAttribute="bottom" secondItem="gik-28-YaE" secondAttribute="bottom" constant="20" symbolic="YES" id="ZpJ-SG-4F5"/>
+                                                <constraint firstItem="oyM-YT-xQk" firstAttribute="leading" secondItem="vjS-UC-2sM" secondAttribute="leading" constant="16" id="gpI-CZ-tNB"/>
+                                                <constraint firstAttribute="trailing" secondItem="gik-28-YaE" secondAttribute="trailing" constant="20" symbolic="YES" id="zGk-Ih-kal"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="2Zw-SG-bD7" kind="show" id="mHP-ih-8Uk"/>
+                                        </connections>
+                                    </tableViewCell>
                                 </cells>
                             </tableViewSection>
                         </sections>
@@ -193,7 +236,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="k7q-sM-Pl9" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="675" y="133"/>
+            <point key="canvasLocation" x="674.39999999999998" y="132.26600985221674"/>
         </scene>
         <!--About View Controller-->
         <scene sceneID="ChW-yQ-91N">
@@ -473,14 +516,99 @@
             </objects>
             <point key="canvasLocation" x="2252.1739130434785" y="978.34821428571422"/>
         </scene>
+        <!--CoreData into TableView-->
+        <scene sceneID="4yj-im-Sr8">
+            <objects>
+                <tableViewController id="2Zw-SG-bD7" customClass="TableViewController" customModule="CTEx" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="128" sectionHeaderHeight="28" sectionFooterHeight="28" id="xKK-is-cvf">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="TableViewCell" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="128" id="DHu-fx-0ws" customClass="TableViewCell" customModule="CTEx" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="128"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="DHu-fx-0ws" id="HTt-yM-yJx">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="128"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="74f-Ns-4Qf">
+                                            <rect key="frame" x="10" y="10" width="167" height="108"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="167" id="ajv-HA-rDM"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hft-A4-kgw">
+                                            <rect key="frame" x="185" y="10" width="180" height="21"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="21" id="kgK-BG-Oje"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="By Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SXP-tz-QPg">
+                                            <rect key="frame" x="185" y="53.666666666666657" width="180" height="21"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="21" id="eQ7-Ng-JWI"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Year Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J3h-yk-R6F">
+                                            <rect key="frame" x="185" y="97" width="180" height="21"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="21" id="Do0-xt-4eN"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="bottom" secondItem="74f-Ns-4Qf" secondAttribute="bottom" constant="10" id="7fb-Lb-1Eq"/>
+                                        <constraint firstAttribute="trailing" secondItem="J3h-yk-R6F" secondAttribute="trailing" constant="10" id="QYh-E1-3gn"/>
+                                        <constraint firstAttribute="trailing" secondItem="SXP-tz-QPg" secondAttribute="trailing" constant="10" id="SYO-xs-beE"/>
+                                        <constraint firstAttribute="bottom" secondItem="J3h-yk-R6F" secondAttribute="bottom" constant="10" id="VcH-Sf-iS7"/>
+                                        <constraint firstItem="J3h-yk-R6F" firstAttribute="leading" secondItem="74f-Ns-4Qf" secondAttribute="trailing" constant="8" id="VrI-0g-2zp"/>
+                                        <constraint firstAttribute="trailing" secondItem="Hft-A4-kgw" secondAttribute="trailing" constant="10" id="Vzc-Jq-NUF"/>
+                                        <constraint firstItem="74f-Ns-4Qf" firstAttribute="top" secondItem="HTt-yM-yJx" secondAttribute="top" constant="10" id="giv-bJ-7td"/>
+                                        <constraint firstItem="SXP-tz-QPg" firstAttribute="centerY" secondItem="HTt-yM-yJx" secondAttribute="centerY" id="kym-c6-c7s"/>
+                                        <constraint firstItem="SXP-tz-QPg" firstAttribute="leading" secondItem="74f-Ns-4Qf" secondAttribute="trailing" constant="8" id="mmT-rb-Ya1"/>
+                                        <constraint firstItem="Hft-A4-kgw" firstAttribute="leading" secondItem="74f-Ns-4Qf" secondAttribute="trailing" constant="8" id="ogE-eX-2QM"/>
+                                        <constraint firstItem="Hft-A4-kgw" firstAttribute="top" secondItem="HTt-yM-yJx" secondAttribute="top" constant="10" id="tcm-Ti-f6F"/>
+                                        <constraint firstItem="74f-Ns-4Qf" firstAttribute="leading" secondItem="HTt-yM-yJx" secondAttribute="leading" constant="10" id="u0b-RC-PcB"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="byLabel" destination="SXP-tz-QPg" id="002-Jo-Zcp"/>
+                                    <outlet property="imgView" destination="74f-Ns-4Qf" id="tWN-Ah-nV1"/>
+                                    <outlet property="nameLabel" destination="Hft-A4-kgw" id="JCz-iU-zpC"/>
+                                    <outlet property="yearLabel" destination="J3h-yk-R6F" id="YrC-vA-PsK"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="2Zw-SG-bD7" id="uFc-3Q-70o"/>
+                            <outlet property="delegate" destination="2Zw-SG-bD7" id="mBK-pI-4s1"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="CoreData into TableView" id="YXk-OV-yM4"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ZXm-1v-omc" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="674" y="-801"/>
+        </scene>
     </scenes>
     <resources>
-        <image name="house" catalog="system" width="64" height="54"/>
-        <image name="info.circle" catalog="system" width="64" height="60"/>
-        <image name="line.horizontal.3" catalog="system" width="64" height="32"/>
-        <image name="person.circle" catalog="system" width="64" height="60"/>
+        <image name="house" catalog="system" width="32" height="32"/>
+        <image name="info.circle" catalog="system" width="32" height="32"/>
+        <image name="line.horizontal.3" catalog="system" width="32" height="32"/>
+        <image name="magnifyingglass" catalog="system" width="64" height="56"/>
+        <image name="person.circle" catalog="system" width="32" height="32"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="6wD-pc-IOY"/>
+        <segue reference="x7G-fs-BNP"/>
     </inferredMetricsTieBreakers>
 </document>
